<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorFondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.markplace.element.LogoTextView
            style="@style/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloRegistrate"
            android:textColor="@color/colorBlanco"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descRegistrate"
            android:textSize="15dp"
            android:layout_marginBottom="@dimen/paddingBottonText"
            android:textColor="@color/colorBlanco"/>
        <EditText
            android:id="@+id/register_txt_usuario"
            android:hint="@string/labelUsuario"
            style="@style/inputText"
            />
        <EditText
            android:id="@+id/register_txt_email"
            android:hint="@string/labelEmail"
            style="@style/inputText"
            />
        <EditText
            android:id="@+id/register_txt_password"
            android:hint="@string/labelPassword"
            android:inputType="textPassword"
            style="@style/inputText"/>
        <EditText
            android:id="@+id/register_txt_confirm_password"
            android:hint="@string/labelConfirmPassword"
            android:inputType="textPassword"
            style="@style/inputText"
            />
        <Button
            android:id="@+id/register_btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnRegistrate"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorAnalogoCuatro"
            />
    </LinearLayout>
</FrameLayout>
