<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorFondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.markplace.element.LogoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logo"
            android:textSize="80dp"
            android:layout_marginTop="@dimen/marginLogoTopBottom"
            android:layout_marginBottom="@dimen/marginLogoTopBottom"
            android:textColor="@color/colorBlanco"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloRecuperar"
            android:textColor="@color/colorBlanco"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descRecuperar"
            android:textSize="15dp"
            android:layout_marginBottom="@dimen/paddingBottonText"
            android:textColor="@color/colorBlanco"/>

        <EditText
            android:id="@+id/recovery_txt_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelEmail"
            android:textColorHint="@color/colorBlanco"
            android:paddingBottom="@dimen/paddingBottonText"
            android:layout_marginBottom="@dimen/marginTextTopBottom"/>
        <Button
            android:id="@+id/recovery_btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnReset"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorAnalogoCuatro"
            />
        <TextView
            android:id="@+id/recovery_lbl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRegresarLogin"
            android:textColor="@color/colorBlanco"
            android:layout_marginTop="@dimen/marginTextTopBottom"
            android:gravity="right"/>
    </LinearLayout>
</FrameLayout>
