<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorFondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.markplace.element.LogoTextView
            style="@style/logo"/>
        <EditText
            android:id="@+id/main_txt_usuario"
            android:hint="@string/labelUsuario"
            style="@style/inputText"
            />
        <EditText
            android:id="@+id/main_txt_password"
            android:inputType="textPassword"
            android:hint="@string/labelPassword"
            style="@style/inputText"/>
        <Button
            android:id="@+id/main_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnEntrar"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorAnalogoCuatro"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >
        <TextView
            android:id="@+id/main_lbl_register"
            android:layout_width="@dimen/logwidth"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/logWeight"
            android:text="@string/labelLogFb"
            android:textColor="@color/colorBlanco"
            android:gravity="center"/>
        <TextView
            android:id="@+id/main_lbl_reset"
            android:layout_width="@dimen/logwidth"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/recoveryWeight"
            android:text="@string/labelLogGoogle"
            android:textColor="@color/colorBlanco"
            android:gravity="center"/>
    </LinearLayout>
</FrameLayout>
