<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorFondo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/search_image_view"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                fresco:placeholderImage="@drawable/userdefault"
                fresco:roundedCornerRadius="5dp"
                fresco:roundBottomLeft="false"
                fresco:roundBottomRight="false"
                fresco:roundWithOverlayColor="@color/colorFondo"
                fresco:roundingBorderWidth="1dp"
                fresco:roundingBorderColor="@color/colorBlanco"
                android:layout_marginTop="@dimen/marginLogoTopBottom"
                android:layout_marginBottom="@dimen/marginLogoTopBottom"
                />

            <com.markplace.element.LogoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/logo"
                android:textSize="40dp"
                android:textColor="@color/colorNegro"
                android:layout_gravity="bottom"
                android:gravity="center"/>
            <com.markplace.element.LogoTextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/logo"
                android:textSize="40dp"
                android:textColor="@color/colorBlanco"
                android:layout_gravity="bottom"
                android:gravity="center"/>
        </FrameLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloSearch"
            android:textColor="@color/colorBlanco"
            android:layout_marginBottom="5dp"
            android:textSize="18dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descSearch"
            android:textSize="15dp"
            android:layout_marginBottom="@dimen/paddingBottonText"
            android:textColor="@color/colorBlanco"/>

        <EditText
            android:id="@+id/search_txt_equipo"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelEquipo"
            android:textColorHint="@color/colorBlanco"
            android:paddingBottom="@dimen/paddingBottonText"
            android:layout_marginBottom="@dimen/marginTextTopBottom"/>
        <Button
            android:id="@+id/search_btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnSearch"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorAnalogoCuatro"
            android:layout_marginBottom="@dimen/paddingBottonText"
            />
        <Button
            android:id="@+id/search_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelBtnRegisterTeam"
            android:textColor="@color/colorBlanco"
            android:background="@color/colorAnalogoCuatro"
            />
    </LinearLayout>
</FrameLayout>
